新增ts以及tsx语法的写法例子

--- a/lerna-vue3-template/packages/button/package.json
+++ b/lerna-vue3-template/packages/button/package.json
@@ -9,7 +9,7 @@
   "author": "hookview <18260439083@163.com>",
   "homepage": "http://button",
   "license": "ISC",
-  "main": "lib/button.js",
+  "main": "button/index.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
