--- a/lerna-vue3-template/packages/alert/package.json
+++ b/lerna-vue3-template/packages/alert/package.json
@@ -9,7 +9,7 @@
   "author": "hookview <18260439083@163.com>",
   "homepage": "",
   "license": "ISC",
-  "main": "lib/alert.js",
+  "main": "lib/alert.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
