--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "systemjs": "^6.14.2",
     "vue": "^3.3.4",
     "vue-grid-layout": "3.0.0-beta1",
     "xlsx": "^0.18.5",
